# csug_transcript_estimator

./: .gitignore  CSUG.txt  Dockerfile  README.md  changelog.md  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
scripts/: deploy.sh
src/: app.py  audit.py  auth.py  cache.py  confidence_scorer.py  config.py  display.py  evaluator.py  gemini_client.py  gemini_client__old_deprecated.py  models.py  parsers.py  processors.py  rate_limit.py  rules_engine.py
