[tool.poetry]
name = "csug-transcript-estimator"
version = "0.1.0"
description = "streamlit app to build transcript estimator"
authors = ["Jayesh Patil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.39.0"
pypdf2 = "^3.0.1"
google-generativeai = "^0.8.5"
pdf2image = "^1.17.0"
plotly = "^5.24.1"
reportlab = "^4.2.5"
google-genai = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
